# wagtailblog

./: Dockerfile  LICENSE  README.md  pyproject.toml
wagtailblog/: urls.py  wsgi.py
wagtailblog/forms/: apps.py  models.py
wagtailblog/home/: apps.py  models.py
wagtailblog/home/migrations/: 0002_create_homepage.py
wagtailblog/images/: apps.py
wagtailblog/navigation/: apps.py  models.py
wagtailblog/news/: apps.py  models.py
wagtailblog/search/tests/: test_view.py
wagtailblog/settings/: base.py  dev.py
wagtailblog/standardpages/: apps.py  models.py
wagtailblog/users/: apps.py
wagtailblog/utils/: apps.py  blocks.py  models.py
