[tool.poetry]
name = "wagtail blog"
version = "0.0.1"
description = "Test d'un blog wagtail"
authors = ["Osynia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = ">=6.2,<6.3"
django = ">=4.2,<5.2"
dj-database-url = "^2.3.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
whitenoise = "^6.8.2"
gunicorn = "23.0.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
wagtail-storages = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
